app/src/main/cpp/audio_engine.h

    
    // Integração MIDI
    void setLooperMidiEnabled(bool enabled);
    void setLooperMidiChannel(int channel);
    void setLooperMidiCCMapping(int ccNumber, int function); // 0=record, 1=play, 2=stop, etc.
    bool isLooperMidiEnabled();
    int getLooperMidiChannel();
    void processLooperMidiMessage(int status, int data1, int data2);
    
    // Notificações
    void setLooperNotificationEnabled(bool enabled);
    void setLooperNotificationControls(bool showControls);
    bool isLooperNotificationEnabled();
    bool isLooperNotificationControlsEnabled();
    void updateLooperNotificationState();
    // Declarações para o metrônomo
    void setMetronomeVolume(float volume);
    void setMetronomeTimeSignature(int beats);
    
    // Métodos getter para parâmetros de efeitos
    float getGain();
    float getDistortion();