flutter_app/lib/engine/bindings.dart


  late final _setLooperMidiEnabledPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Bool)>>(
        'setLooperMidiEnabled',
      );
  late final _setLooperMidiEnabled = _setLooperMidiEnabledPtr
      .asFunction<void Function(bool)>();

  void setLooperMidiChannel(int channel) {
    return _setLooperMidiChannel(channel);
  }

  late final _setLooperMidiChannelPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int)>>(
        'setLooperMidiChannel',
      );
  late final _setLooperMidiChannel = _setLooperMidiChannelPtr
      .asFunction<void Function(int)>();

  void setLooperMidiCCMapping(int ccNumber, int function) {
    return _setLooperMidiCCMapping(ccNumber, function);
  }

  late final _setLooperMidiCCMappingPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int, ffi.Int)>>(
        'setLooperMidiCCMapping',
      );
  late final _setLooperMidiCCMapping = _setLooperMidiCCMappingPtr
      .asFunction<void Function(int, int)>();

  bool isLooperMidiEnabled() {
    return _isLooperMidiEnabled();
  }

  late final _isLooperMidiEnabledPtr =
      _lookup<ffi.NativeFunction<ffi.Bool Function()>>('isLooperMidiEnabled');
  late final _isLooperMidiEnabled = _isLooperMidiEnabledPtr
      .asFunction<bool Function()>();

  int getLooperMidiChannel() {
    return _getLooperMidiChannel();
  }

  late final _getLooperMidiChannelPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function()>>('getLooperMidiChannel');
  late final _getLooperMidiChannel = _getLooperMidiChannelPtr
      .asFunction<int Function()>();

  void processLooperMidiMessage(int status, int data1, int data2) {
    return _processLooperMidiMessage(status, data1, data2);
  }

  late final _processLooperMidiMessagePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int, ffi.Int, ffi.Int)>>(
        'processLooperMidiMessage',
      );
  late final _processLooperMidiMessage = _processLooperMidiMessagePtr
      .asFunction<void Function(int, int, int)>();

  /// Notificações
  void setLooperNotificationEnabled(bool enabled) {
    return _setLooperNotificationEnabled(enabled);
  }

  late final _setLooperNotificationEnabledPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Bool)>>(
        'setLooperNotificationEnabled',
      );
  late final _setLooperNotificationEnabled = _setLooperNotificationEnabledPtr
      .asFunction<void Function(bool)>();

  void setLooperNotificationControls(bool showControls) {
    return _setLooperNotificationControls(showControls);
  }

  late final _setLooperNotificationControlsPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Bool)>>(
        'setLooperNotificationControls',
      );
  late final _setLooperNotificationControls = _setLooperNotificationControlsPtr
      .asFunction<void Function(bool)>();

  bool isLooperNotificationEnabled() {
    return _isLooperNotificationEnabled();
  }

  late final _isLooperNotificationEnabledPtr =
      _lookup<ffi.NativeFunction<ffi.Bool Function()>>(
        'isLooperNotificationEnabled',
      );
  late final _isLooperNotificationEnabled = _isLooperNotificationEnabledPtr
      .asFunction<bool Function()>();

  bool isLooperNotificationControlsEnabled() {
    return _isLooperNotificationControlsEnabled();
  }

  late final _isLooperNotificationControlsEnabledPtr =
      _lookup<ffi.NativeFunction<ffi.Bool Function()>>(
        'isLooperNotificationControlsEnabled',
      );
  late final _isLooperNotificationControlsEnabled =
      _isLooperNotificationControlsEnabledPtr.asFunction<bool Function()>();

  void updateLooperNotificationState() {
    return _updateLooperNotificationState();
  }

  late final _updateLooperNotificationStatePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function()>>(
        'updateLooperNotificationState',
      );
  late final _updateLooperNotificationState = _updateLooperNotificationStatePtr
      .asFunction<void Function()>();

  /// Declarações para o metrônomo
  void setMetronomeVolume(double volume) {
    return _setMetronomeVolume(volume);
  }

  late final _setMetronomeVolumePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Float)>>(
        'setMetronomeVolume',
      );
  late final _setMetronomeVolume = _setMetronomeVolumePtr
      .asFunction<void Function(double)>();

  void setMetronomeTimeSignature(int beats) {
    return _setMetronomeTimeSignature(beats);
  }

  late final _setMetronomeTimeSignaturePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int)>>(
        'setMetronomeTimeSignature',
      );
  late final _setMetronomeTimeSignature = _setMetronomeTimeSignaturePtr
      .asFunction<void Function(int)>();

  /// Métodos getter para parâmetros de efeitos
  double getGain() {
    return _getGain();
  }

  late final _getGainPtr = _lookup<ffi.NativeFunction<ffi.Float Function()>>(
    'getGain',
  );
  late final _getGain = _getGainPtr.asFunction<double Function()>();

  double getDistortion() {
    return _getDistortion();
  }

  late final _getDistortionPtr =
      _lookup<ffi.NativeFunction<ffi.Float Function()>>('getDistortion');
  late final _getDistortion = _getDistortionPtr.asFunction<double Function()>();

  /// Abre streams Oboe e começa a processar. Retorna 0 em sucesso, código de
  /// erro Oboe < 0 caso falhe. sampleRate 0 deixa o Oboe escolher a taxa nativa
  /// do device. framesPerCallback 0 deixa o Oboe usar o burst nativo.
  int audio_engine_start(int sampleRate, int framesPerCallback) {
    return _audio_engine_start(sampleRate, framesPerCallback);
  }

  late final _audio_engine_startPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Int, ffi.Int)>>(
        'audio_engine_start',
      );
  late final _audio_engine_start = _audio_engine_startPtr
      .asFunction<int Function(int, int)>();

  /// Para e fecha os streams. Idempotente.
  void audio_engine_stop() {
    return _audio_engine_stop();
  }

  late final _audio_engine_stopPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function()>>('audio_engine_stop');
  late final _audio_engine_stop = _audio_engine_stopPtr
      .asFunction<void Function()>();

  /// True se há streams abertas e rodando.
  bool audio_engine_is_running() {
    return _audio_engine_is_running();
  }

  late final _audio_engine_is_runningPtr =
      _lookup<ffi.NativeFunction<ffi.Bool Function()>>(
        'audio_engine_is_running',
      );
  late final _audio_engine_is_running = _audio_engine_is_runningPtr
      .asFunction<bool Function()>();

  /// Latência de round-trip estimada em milissegundos (input + output). -1 se
  /// não disponível.
  double audio_engine_get_latency_ms() {
    return _audio_engine_get_latency_ms();
  }

  late final _audio_engine_get_latency_msPtr =
      _lookup<ffi.NativeFunction<ffi.Double Function()>>(
        'audio_engine_get_latency_ms',
      );
  late final _audio_engine_get_latency_ms = _audio_engine_get_latency_msPtr
      .asFunction<double Function()>();

  /// Contador de underruns acumulados desde o último start. Para telemetria do
  /// benchmark.
  int audio_engine_get_xrun_count() {
    return _audio_engine_get_xrun_count();
  }

  late final _audio_engine_get_xrun_countPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function()>>(
        'audio_engine_get_xrun_count',
      );
  late final _audio_engine_get_xrun_count = _audio_engine_get_xrun_countPtr
      .asFunction<int Function()>();

  /// Sample rate efetivo escolhido pelo Oboe (pode diferir do solicitado). 0 se
  /// não rodando.
  int audio_engine_get_sample_rate() {
    return _audio_engine_get_sample_rate();
  }

  late final _audio_engine_get_sample_ratePtr =
      _lookup<ffi.NativeFunction<ffi.Int Function()>>(
        'audio_engine_get_sample_rate',
      );
  late final _audio_engine_get_sample_rate = _audio_engine_get_sample_ratePtr
      .asFunction<int Function()>();
}
